# pyacs36

./: .project  .pydevproject  CHANGELOG.md  MANIFEST  README.md  environment.yaml  log_git.txt  make_pyacs_doc_html_sphinx.sh  pyproject.toml  setup.py  setup_cargese.py
.github/workflows/: docs.yml  static.yml
docs/source/: api.rst  conf.py  foreword.rst  libraries.rst  vel_field.rst
docs/tools/: gen_autosummary_for_pkg.py  generate_autosummary_stubs.py  generate_gts_method_pages.py  make_package_summary.py  patch_apidoc_packages.py
documentation/: Makefile
documentation/source/: conf.py  foreword.rst  gts_methods.rst  pyacs.glinalg.rst  pyacs.gts.lib.filters.rst  pyacs.gts.lib.model.rst  pyacs.gts.lib.rst  pyacs.gts.lib.tensor_ts.rst  pyacs.message.rst  pyacs.sinex.rst  sgts_class.rst  time_series.rst  tutorial_gts.rst
pyacs/: __init__.py  debug.py  verbose.py
pyacs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pyacs/external_pkg/: README.md  __init__.py
pyacs/glinalg/: __init__.py
pyacs/gts/: Gts.py  Sgts.py  __init__.py  tsr.py
pyacs/lib/: astrotime.py  coordinates.py  errors.py  euclid.py  euler.py  glinalg.py  gmtpoint.py  gpstime.py  icosahedron.py  pygamit_module.py  robustestimators.py  shapefile.py  strain.py  syscmd.py  timeperiod.py  units.py  utils.py  vectors.py  vel_field.py
pyacs/message/: __init__.py  debug_message.py  error.py  get_logger.py  message.py  verbose_message.py  warning.py
pyacs/pyacs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyacs/scripts/: ipyacs.py  pyacs_gvel_comb.py  pyacs_gvel_estimate_pole.py  pyacs_gvel_pole.py  pyacs_gvel_strain.py  (+3 more)
pygeca.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sandbox/: common_mode_vondrak.ipynb  cvxopt_filters.ipynb  extensivel1trend_filtering.ipynb  faultslip.py  lazy.py  local_global.py  model_old.py  non_linear_gts_model1.py  plotold.py  test_dc3d0.py
vel/: vel.py
(+1100 files in other folders)
